<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/img_user"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/imgUser"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_user"
        app:layout_constraintTop_toTopOf="@+id/img_user"
        tools:text="@string/name" />

    <TextView
        android:id="@+id/number_Of_Id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ellipsize="end"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_name"
        app:layout_constraintBottom_toBottomOf="@+id/img_user"
        app:layout_constraintStart_toStartOf="@+id/tv_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_name"
        app:layout_constraintVertical_bias="0.0"
        tools:text="@string/id" />

    <TextView
        android:id="@+id/tv_website"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ellipsize="end"
        android:textSize="13sp"
        app:drawableStartCompat="@drawable/ic_web"
        app:layout_constraintBottom_toBottomOf="@+id/img_user"
        app:layout_constraintEnd_toEndOf="@+id/number_Of_Id"
        app:layout_constraintStart_toStartOf="@+id/number_Of_Id"
        app:layout_constraintTop_toBottomOf="@+id/number_Of_Id"
        app:layout_constraintVertical_bias="0.0"
        tools:text="@string/url" />

</androidx.constraintlayout.widget.ConstraintLayout>
