<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailActivity">

        <ImageView
            android:id="@+id/iv_detail_avatar"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toStartOf="@id/tv_detail_repos"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars"
            android:contentDescription="@string/detailImgUser" />

        <TextView
            android:id="@+id/tv_detail_repos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/repository"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@id/tv_detail_followers"
            app:layout_constraintStart_toEndOf="@id/iv_detail_avatar"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_numberOfRepos" />

        <TextView
            android:id="@+id/tv_detail_numberOfRepos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/tv_detail_repos"
            app:layout_constraintStart_toStartOf="@id/tv_detail_repos"
            app:layout_constraintTop_toTopOf="@id/iv_detail_avatar"
            tools:text="0" />

        <TextView
            android:id="@+id/tv_detail_followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/followers"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@id/tv_detail_following"
            app:layout_constraintStart_toEndOf="@id/tv_detail_repos"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_numberOfFollowers" />

        <TextView
            android:id="@+id/tv_detail_numberOfFollowers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/tv_detail_followers"
            app:layout_constraintStart_toStartOf="@id/tv_detail_followers"
            app:layout_constraintTop_toTopOf="@id/tv_detail_numberOfRepos"
            tools:text="1" />

        <TextView
            android:id="@+id/tv_detail_following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/following"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_detail_followers"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_numberOfFollowing" />

        <TextView
            android:id="@+id/tv_detail_numberOfFollowing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/tv_detail_following"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="@id/tv_detail_following"
            app:layout_constraintTop_toTopOf="@id/tv_detail_numberOfFollowers"
            tools:text="2" />

        <TextView
            android:id="@+id/tv_detail_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:fontFamily="sans-serif-condensed"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/iv_detail_avatar"
            app:layout_constraintTop_toBottomOf="@id/iv_detail_avatar"
            tools:text="@string/name" />

        <TextView
            android:id="@+id/tv_detail_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:drawableStartCompat="@drawable/ic_baseline_apartment_16"
            android:textSize="13sp"
            app:flow_verticalAlign="center"
            app:layout_constraintStart_toStartOf="@id/tv_detail_name"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_name"
            tools:text="@string/company" />

        <TextView
            android:id="@+id/tv_detail_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="13sp"
            app:drawableStartCompat="@drawable/ic_baseline_location_on_16"
            app:flow_verticalAlign="center"
            app:layout_constraintStart_toStartOf="@id/tv_detail_company"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_company"
            tools:text="@string/location" />


        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/tabsLay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_location" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tabs" />


</androidx.constraintlayout.widget.ConstraintLayout>